feat: Create signup.php file and connect to phpMyAdmin

--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
       <h1>Sign Up</h1>
     </header>
     <main class="form-container">
-      <form action="signup.php" method="post" class="signup-form">
+      <form action="db/signup.php" method="post" class="signup-form">
         <label for="name" class="form-label">Name:</label>
         <input type="text" name="name" id="name" class="form-input" />
 
