fix: Fix form data handling in signup.php

--- a/signup.html
+++ b/signup.html
@@ -15,14 +15,14 @@
         <label for="name" class="form-label">Name:</label>
         <input type="text" name="name" id="name" class="form-input" />
 
-        <label for="l-name" class="form-label">Lastname:</label>
-        <input type="text" name="l-name" id="l-name" class="form-input" />
+        <label for="l_name" class="form-label">Lastname:</label>
+        <input type="text" name="l_name" id="l_name" class="form-input" />
 
-        <label for="u-name" class="form-label">Username:</label>
-        <input type="text" name="u-name" id="u-name" class="form-input" />
+        <label for="u_name" class="form-label">Username:</label>
+        <input type="text" name="u_name" id="u_name" class="form-input" />
 
-        <label for="p-word" class="form-label">Password:</label>
-        <input type="password" name="p-word" id="p-word" class="form-input" />
+        <label for="p_word" class="form-label">Password:</label>
+        <input type="password" name="p_word" id="p_word" class="form-input" />
 
         <label for="fav" class="form-label">Pick your favorite genre:</label>
         <select name="fav" id="fav" class="form-select">
