feat: Add show users functionality

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
         <p>Join our community!</p>
         <div class="buttons">
           <a href="signup.html" target="_blank" class="btn">Sign Up</a>
-          <a href="login.html" target="_blank" class="btn">Log In</a>
-          <a href="showusers" target="_blank" class="btn">Show Users</a>
+          <a href="db/showusers.php" target="_blank" class="btn">Show Users</a>
         </div>
       </footer>
     </div>
